# SharkEyes-Lib

./: LICENSE  pyproject.toml  sharkeyes.py
sharkeyes/: __init__.py
sharkeyes_lib/: __init__.py  sharkeyes.py
sharkeyes_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
