[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
 
[project]
name = "sharkeyes-lib"
version = "1.0.0"
description = "Python client for SharkEyes bot-detection API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["httpx>=0.23.0"]
 
[project.urls]
Homepage = "https://github.com/SharkEyes-Dev/SharkEyes-Lib"
 
